<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="#00E5FF"
    tools:context=".java_quiz">
    <TextView
        android:id="@+id/java_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/white"
        android:text="@string/java_programming1"
        android:textSize="30dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10:00"
        android:textSize="25dp"
        android:textStyle="bold"
        android:padding="20dp"
        android:textColor="#FF1744"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="290dp"/>

    <TextView
        android:id="@+id/java_head2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/java_head"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="start"
        android:textColor="@color/white"
        android:padding="10dp"
        android:text="@string/solve_the_following_question"
        android:textSize="27dp" />

    <TextView
        android:id="@+id/totalques"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_question"
        android:textColor="@color/white"
        android:layout_below="@+id/java_head2"
        android:layout_marginStart="21dp"
        android:layout_marginTop="21dp"
        android:textStyle="bold"
        android:layout_marginBottom="21dp"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/java_head2"
        android:layout_marginTop="70dp"
        android:textColor="@color/white"
        android:text="@string/this_is_question"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textAlignment="center"
        android:padding="10dp"
        android:gravity="center"
        android:layout_centerVertical="true"/>
    <LinearLayout
        android:id="@+id/optios"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/question"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="10dp"
            android:text="@string/and_a"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/and_b"
            android:textSize="20dp"
            android:textColor="#000000"
            android:backgroundTint="@color/white"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="10dp"
            android:text="@string/and_c"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/and_d"
            android:textSize="20dp"
            android:textColor="#000000"
            android:padding="10dp"
            android:layout_margin="5dp"
            />
    </LinearLayout>
<Button
    android:id="@+id/submit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:text="@string/submit"
    android:textStyle="bold"
    android:textSize="25dp"
    android:backgroundTint="#BC0ADA"
    android:layout_marginTop="645dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"/>



</RelativeLayout>