<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="#00E5FF"
    tools:context=".java_quiz">
    <TextView
        android:id="@+id/python_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/white"
        android:text="@string/python_programming1"
        android:textSize="30dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/python_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10:00"
        android:textSize="25dp"
        android:textStyle="bold"
        android:padding="20dp"
        android:textColor="#FF1744"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="290dp"/>

    <TextView
        android:id="@+id/python_head2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/python_head"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="10dp"
        android:text="Solve the Following Question"
        android:textSize="27dp" />

    <TextView
        android:id="@+id/totalques"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="total question"
        android:textColor="@color/white"
        android:layout_below="@+id/python_head2"
        android:layout_marginStart="21dp"
        android:layout_marginTop="21dp"
        android:textStyle="bold"
        android:layout_marginBottom="21dp"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/python_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/python_head2"
        android:layout_marginTop="70dp"
        android:textColor="@color/white"
        android:text="this is question"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textAlignment="center"
        android:padding="10dp"
        android:gravity="center"
        android:layout_centerVertical="true"/>
    <LinearLayout
        android:id="@+id/python_optios"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/python_question"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/python_option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="10dp"
            android:text="@string/and_a2"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/python_option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/and_b2"
            android:textSize="20dp"
            android:textColor="#000000"
            android:backgroundTint="@color/white"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/python_option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="10dp"
            android:text="@string/and_c3"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_margin="5dp"
            />
        <Button
            android:id="@+id/python_option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/and_d2"
            android:textSize="20dp"
            android:textColor="#000000"
            android:padding="10dp"
            android:layout_margin="5dp"
            />
    </LinearLayout>
    <Button
        android:id="@+id/python_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/submit2"
        android:textStyle="bold"
        android:textSize="25dp"
        android:backgroundTint="#BC0ADA"
        android:layout_marginTop="630dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"/>



</RelativeLayout>