<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz_layout"
    android:layout_gravity="center"
    android:background="@drawable/img_1"
    android:scaleType="centerCrop">
    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_quizzer"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/head1"
        android:layout_below="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_your_knowledge"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/head1"
            android:orientation="vertical"
            android:layout_marginTop="120dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/JAVA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"

                app:cardCornerRadius="18dp">

                <TextView
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/java_programming"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:padding="20dp"
                    android:textColor="#00E5FF"/>            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="10dp"

                app:cardCornerRadius="18dp">

                <TextView
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c_programming"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:padding="20dp"
                    android:textColor="#00E5FF"/>            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/PYTHON"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="18dp">                <TextView
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/python_programming"
                android:textSize="25dp"
                android:textStyle="bold"
                android:padding="20dp"
                android:textColor="#00E5FF"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/DBMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="18dp">

                           </androidx.cardview.widget.CardView>
        </LinearLayout>

</RelativeLayout>